<resources>

    <string name="input_phone_number">请输入手机号</string>
    <string name="not_mobile_format">手机号码格式不正确</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="obtain_code">获取验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="code_error">验证码不正确</string>
    <string name="input_password_count">请输入6-18位密码</string>
    <string name="password_inconformity">两次密码输入不一致</string>

    <string name="app_name">拍星人</string>
    <string name="screen_shot">操作截图</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="developing">开发中</string>

    <string name="save">保存</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <string name="send_code_succeed">验证码发送成功</string>
    <string name="home">会员首页</string>
    <string name="agree_protocol"><![CDATA[点击注册即表示同意 <font color="#ff2456">%s</font>]]></string>
    <string name="order_num"><![CDATA[升级下一级还需 <font color="#ff0000">%s</font> 单]]></string>
    <string name="commission_num"><![CDATA[佣金：<font color="#ff0000">￥%s</font>]]></string>
    <string name="low_price"><![CDATA[<font color="#ff0000">%s</font>元 —]]></string>
    <string name="high_price"><![CDATA[<font color="#ff0000">%s</font>元]]></string>

    <string name="individuality_portrait">个性头像：</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_address">请输入详细地址</string>
    <string name="change_phone_code">验证码以短息方式发送至您的手机，请在60s内输入验证码！</string>

    <string name="task_num">任务编号：%1$s</string>
    <string name="yuan_positive">+%1$s元</string>
    <string name="yuan_burden">-%1$s元</string>
    <string name="balance">余额：%1$s</string>
    <string name="money">￥%1$s</string>
    <string name="account_details">账户明细</string>
    <string name="information_fill_in">资料填写</string>
    <string name="next_step">下一步</string>
    <string name="evaluate_manager">评价管理</string>
    <string name="touch_to_focus">触摸屏幕对焦</string>
    <string name="choose_id_front">请选择身份证正面</string>
    <string name="choose_id_reverse">请选择身份证反面</string>
    <string name="choose_bank_ka">请选择银行卡照片</string>
    <string name="choose_birthday">请选择生日</string>
    <string name="choose_sex">请选择性别</string>
    <string name="input_profession">请选择职业</string>
    <string name="input_weixin">请输入微信号</string>
    <string name="input_qq">请输入QQ号</string>
    <string name="input_bank_num">请输入银行卡号</string>
    <string name="input_other_weixin">请输入介绍人微信</string>
    <string name="input_details_address">请填写详细地址</string>
    <string name="choose_address_click">请点击选择地址</string>
    <string name="perfect_data_wait">资料待完善</string>
    <string name="audit_wait">资料已经上传，待审核</string>
    <string name="doing">执行中</string>
    <string name="been_cancelled">已取消</string>
    <string name="have_finished">已完成</string>
    <string name="delete_order">删除订单</string>
    <string name="give_up_order">放弃订单</string>
    <string name="receive_order">接单</string>
    <string name="give_up">放弃</string>
    <string name="have_new_task">你有一条新任务订单</string>
    <string name="news_details">详情</string>
    <string name="order_details">订单详情</string>
    <string name="order">订单</string>
    <string name="get_approved">资料已通过审核</string>
    <string name="not_approved">资料审核不通过</string>
    <string name="l_have_time">我有时间</string>
    <string name="grade">LV%1$s</string>
    <string name="copy">复制</string>
    <string name="copy_succeed">已复制到剪贴板</string>
    <string name="not_copy_empty">复制的内容不存在</string>

</resources>
