<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/msg_tv"
        style="@style/text16colorBlack"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/d_15dp"
        android:lineSpacingMultiplier="1.4"
        android:padding="@dimen/d_15dp"
        android:text="@string/have_new_task" />


    <com.xson.common.widget.FormatTextView
        android:id="@+id/commission_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_16sp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:paddingBottom="@dimen/d_15dp"
        app:defaultValue="100"
        app:formatText="@string/commission_num" />

    <TextView style="@style/line_H1dp_divider" />

    <LinearLayout style="@style/h_match_parent">

        <TextView
            android:id="@+id/no_tv"
            style="@style/text14color999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/give_up" />

        <TextView style="@style/line_v1dp_divider" />


        <TextView
            android:id="@+id/yes_tv"
            style="@style/text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/color2cc6fc"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/receive_order"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
